--- a/main_script.Rmd
+++ b/main_script.Rmd
@@ -167,7 +167,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 <!-- From here on, include your different data chapters using normal Rmarkdown titles -->
 
 <!-- Modify me! -->
-# Chapter Two: Insert Title Chapter Here 
+# Chapter Two: Accurate ethnicity prediction from placental DNA methylation data
 
 <!-- Set figure and table numbering according to the chapter -->
 \renewcommand{\thefigure}{2.\arabic{figure}}
@@ -183,7 +183,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 \clearpage
 
 <!-- Modify me! -->
-# Chapter Three: Insert Title Chapter Here
+# Chapter Three: Cell-specific characterization of the placental methylome
 
 <!-- Set figure and table numbering according to the chapter -->
 \renewcommand{\thefigure}{3.\arabic{figure}}
@@ -199,7 +199,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 \clearpage
 
 <!-- Modify me! -->
-# Chapter Four: Insert Title Chapter Here
+# Chapter Four: Maternal contamination in placental DNA methylation studies
 
 <!-- Set figure and table numbering according to the chapter -->
 \renewcommand{\thefigure}{4.\arabic{figure}}
@@ -215,7 +215,6 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 \clearpage
 
 <!-- Modify me! -->
-# Chapter Five: Insert Title Chapter Here
 
 <!-- Set figure and table numbering according to the chapter -->
 \renewcommand{\thefigure}{5.\arabic{figure}}
@@ -232,9 +231,9 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 
 <!-- Done with data chapters, last sections -->
 
-# Synthesis and Conclusion
+# Discussion
 
-```{r Conclusion, child = './Sections/09_Conclusion.Rmd', eval = T}
+```{r Discussion, child = './Sections/09_Discussion.Rmd', eval = T}
 ```
 
 \clearpage
