copy paste abstract -too long

--- a/Sections/02_Abstract.Rmd
+++ b/Sections/02_Abstract.Rmd
@@ -6,10 +6,12 @@ output:
     number_sections: yes
 ---
 
-<!-- Remember, It can't be longer than 350 words! -->
+<!-- Remember, It can't be longer than 350 words! Currently way over-->
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eleifend odio odio, et consectetur nunc commodo vitae. Donec eu finibus lacus. Integer at porta nulla. Fusce dignissim gravida lacinia. Nulla ut odio in ante imperdiet placerat. Maecenas vel imperdiet lorem. Proin ultricies, ex at bibendum fringilla, neque libero malesuada sem, in tincidunt leo mi vel mi. Phasellus scelerisque sagittis urna sed sodales. Curabitur iaculis justo velit, ultricies euismod justo convallis non. Nunc id purus et ante iaculis dignissim vel non erat. Donec dignissim urna ut lobortis congue. Nulla tempus ut ipsum non ornare. Donec ac purus nec sem cursus eleifend. Suspendisse potenti. Vestibulum ac vehicula ante.
+The functioning of the placenta is critical for the healthy development of the fetus during pregnancy. Many perinatal health outcomes have been linked to placental-specific alterations in DNA methylation (DNAm), an epigenetic modification that regulates gene expression. Placental DNAm studies are often carried out on a population level, i.e. including hundreds of samples. Researchers tend to account for covariates such as sex, gestational age, and environmental influences, as these factors have been shown to be associated with effects on DNAm. It is now well-appreciated that genetic ancestry, ethnicity, and cell composition can explain the majority of variation in DNAm. However, genetic ancestry, ethnicity and cell-specific variation in DNAm is largely uncharacterized in the human placenta.
 
-Donec pulvinar a est ut vulputate. In id euismod nisi. Curabitur pulvinar bibendum convallis. Phasellus luctus posuere quam, a dapibus massa tristique in. Sed fermentum fermentum velit non sodales. Donec eget efficitur turpis. Sed ligula diam, ultrices porta vestibulum sed, varius maximus erat. Sed sagittis ut nisi ac tincidunt. Aliquam augue elit, egestas eu commodo ut, eleifend et nulla. Phasellus mollis lacus ac tortor fringilla, eget viverra enim sagittis. Morbi facilisis porttitor dui, eget elementum tellus malesuada ac. Integer sed accumsan lorem. Cras placerat ultrices libero at efficitur. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+Ethnicity, which is self-reported, is often used as a surrogate marker for genetic ancestry, which is based on genetic markers, in population-based genomic studies. Having self-reported ethnicity in DNAm studies is an asset, since genetically-determined ancestry is often unavailable. However, self-reported ethnicity is not always collected, inconsistently defined, and sometimes poorly correlated with genetic ancestry. Therefore, there is a need for a consistently-defined marker of ethnicity or genetic ancestry for placental DNAm studies. There are existing methods for inferring genetic ancestry or ethnicity from DNAm measured on the popular 450k DNAm array, but these approaches were developed in somatic tissues and may therefore not perform as well on placental data.
 
-Nullam magna elit, sodales eu massa a, rutrum gravida orci. Mauris cursus odio turpis, et dignissim neque rutrum sit amet. Mauris vel nibh enim. Vestibulum tempus et lectus quis tempor. Proin dictum dui luctus felis sodales porttitor. Maecenas viverra vestibulum tristique. Nulla facilisi. Quisque efficitur lacus diam. Phasellus eget ligula quis mauris fermentum feugiat. Duis vitae lectus porttitor, vestibulum velit a, tincidunt nulla. Donec pharetra erat et urna sollicitudin, ac iaculis quam pulvinar. Donec pulvinar justo maximus lacinia sodales. Etiam sit amet diam vel ligula tempor congue nec in libero. Donec arcu risus, posuere.
+The etiology of many pregnancy-associated conditions involves abnormalities in cell-specific placental processes. Preeclampsia, fetal growth restriction, and placenta accrete can occur when trophoblast-mediated invasion and remodeling of maternal vasculature is defective. To date, most research has relied on cell culturing methods to investigate trophoblast function. However, findings from these in vitro studies are limited in their ability to generalize because they fail to account for the complex uterine environment that exists in vivo. Furthermore, the extent of which other cell populations in the placenta contribute to placental-mediated pathologies is highly likely, yet poorly understood. For example, fetally-derived macrophages such as Hofbauer cells are enriched in inflammatory conditions resulting from infection, but our understanding of their exact function and origins is rudimentary at best. Vessel and endothelial cells in the mesenchymal core of the chorionic villi are likely affected in pathologies associated with alterations in blood flow, but the relevance of these cells is often overlooked as well. There are significant gaps in our cell-specific understanding of placental biology, which will need to be addressed in order to understand the changes that occur under pathological conditions.
+
+Because the placenta is made up of several cell types, each with a distinct DNAm signature, whole-tissue measurements are ultimately an average of the DNAm signatures of the constituent cell types, weighted by their respective frequency in the bulk tissue sample. Therefore, observing variation in DNAm in heterogenous tissues such as the placenta can be often attributed to variation in cell composition, rather than DNAm changes that occur in the constituent cell populations. Variation in cell composition can be accounted for using physical cell counting methods, but these approaches are often challenging in a solid tissue such as the placenta. Instead, researchers are often using DNAm itself to infer cell composition. These bioinformatic algorithms, called cellular deconvolution, rely on cell-specific reference DNAm profiles from constituent cell types. Cell-specific reference DNAm profiles are available for cell deconvolution in tissues such as adult blood, cord blood, brain, and buccal; but not the placenta. Therefore, the extent of confounding from cell composition variation in placental DNAm studies is poorly understood.
