--- a/Sections/05_Glossary.Rmd
+++ b/Sections/05_Glossary.Rmd
@@ -14,15 +14,67 @@ output:
 
 tibble(
    # Acronym list
-   Abr =  c("Acronym A",
-            "Acronym B",
-            "Acronym C"
+   Abr =  c("450k",
+            "EPIC",
+            "AIMs",
+            "CpG",
+            "DMR",
+            "DNAm",
+            "DNMT",
+            "EOPE",
+            "EVT",
+            "EWAS",
+            "CTB",
+            "eQTL",
+            "FDR",
+            "GA",
+            "ICM",
+            "ICR",
+            "LINE-1",
+            "LOPE",
+            "mQTL",
+            "IUGR",
+            "PE",
+            "HB",
+            "nRBC",
+            "TB",
+            "STB",
+            "eSTB",
+            "PTB",
+            "SNP",
+            "TE"
    ),
    # Acronim definition
    Meaning = c(
-      "Deffinition of A",
-      "Deffinition of B",
-      "Deffinition of C"
+      "Infinium HumanMethylation450 Beadchip",
+      "Infinium HumanMethylation EPIC Beadchip",
+      "Ancestry Informative Markers",
+      "Cytosine-guanine dinucleotide",
+      "Differentially methylated region",
+      "DNA methylation",
+      "DNA methyltransferase",
+      "Early-onset preeclampsia",
+      "Extra-villous trophoblast",
+      "Epigenome-wide association study",
+      "Cytotrophoblast",
+      "Expression quantitative trait loci",
+      "False-discovery rate",
+      "Gestational age",
+      "Inner cell mass",
+      "Imprinting control region",
+      "Long interspersed nuclear element-1",
+      "Late-onset preeclampsia",
+      "Methylation quantative trait loci",
+      "Intrauterine growth restriction",
+      "Preeclampsia",
+      "Hofbauer cells",
+      "Nucleated red blood cells",
+      "Trophoblast",
+      "Syncytiotrophoblast",
+      "Enzymatically-separated syncytiotrophoblast",
+      "Preterm birth",
+      "Single nucleotide polymorphism",
+      "Trophectoderm"
    )
 ) %>% 
    dplyr::arrange(Abr) %>%
