--- a/Sections/07_Dedication.Rmd
+++ b/Sections/07_Dedication.Rmd
@@ -9,7 +9,7 @@ output:
 
 \begin{center}
     \vspace*{\fill}
-    Insert here your dedication
+    To my parents
     \vspace*{\fill}
 \end{center}
 
