Change glossary to csv file

--- a/Sections/05_Glossary.Rmd
+++ b/Sections/05_Glossary.Rmd
@@ -6,93 +6,8 @@ output:
     number_sections: yes
 ---
 
-<!-- Note this section is Optional -->
-
-<!-- This is the actual Glossary table. Fill in the lines here  -->
-
 ```{r glossary, eval = T, echo = F}
-
-tibble(
-   # Acronym list
-   Abr =  c("450k",
-            "EPIC",
-            "AIMs",
-            "CpG",
-            "DMR",
-            "DNAm",
-            "DNMT",
-            "EOPE",
-            "EVT",
-            "EWAS",
-            "CTB",
-            "eQTL",
-            "FDR",
-            "GA",
-            "ICM",
-            "ICR",
-            "LINE-1",
-            "LOPE",
-            "mQTL",
-            "IUGR",
-            "PE",
-            "HB",
-            "nRBC",
-            "TB",
-            "STB",
-            "eSTB",
-            "PTB",
-            "SNP",
-            "TE",
-            "HDAC",
-            "HAT",
-            "EGF",
-            "VEGF",
-            "CBP",
-            "H3K27me(2/3)",
-            "H3K9me2",
-            "H3K4me3"
-   ),
-   # Acronim definition
-   Meaning = c(
-      "Infinium HumanMethylation450 Beadchip",
-      "Infinium HumanMethylation EPIC Beadchip",
-      "Ancestry Informative Markers",
-      "Cytosine-guanine dinucleotide",
-      "Differentially methylated region",
-      "DNA methylation",
-      "DNA methyltransferase",
-      "Early-onset preeclampsia",
-      "Extra-villous trophoblast",
-      "Epigenome-wide association study",
-      "Cytotrophoblast",
-      "Expression quantitative trait loci",
-      "False-discovery rate",
-      "Gestational age",
-      "Inner cell mass",
-      "Imprinting control region",
-      "Long interspersed nuclear element-1",
-      "Late-onset preeclampsia",
-      "Methylation quantative trait loci",
-      "Intrauterine growth restriction",
-      "Preeclampsia",
-      "Hofbauer cells",
-      "Nucleated red blood cells",
-      "Trophoblast",
-      "Syncytiotrophoblast",
-      "Enzymatically-separated syncytiotrophoblast",
-      "Preterm birth",
-      "Single nucleotide polymorphism",
-      "Trophectoderm",
-      "Histone deacetylase complexes",
-      "Histone acetyltransferases",
-      "Epidermal growth factor",
-      "Vascular endothelial growth factor",
-      "CREB-binding protein",
-      "Di- or tri- methylation of lysine 27 on histone H3",
-      "Dimethylation of lysine 9 on histone H3",
-      "Trimethylation of lysine 4 on histone H3"
-   )
-) %>% 
+readr::read_csv(here::here('glossary.csv')) %>% 
    dplyr::arrange(Abr) %>%
    kable("latex",
    booktabs = T,
